--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -13,7 +13,7 @@
 
 
 
-<div class="budget-card" style="background-color=@(()=>convertCatColors(subCatColor))">
+<div class="budget-card" style="background-color:@subCatColor;border:1px solid @catOutlineColor" @onfocusout="@(()=>isOptBtnClicked=false)">
     <div class="optionsMenu">
         @if (isOptBtnClicked)
         {
@@ -42,7 +42,7 @@
 
 
         <div class="closedAndOpenMenu">
-            <button class="options-button" @onclick="(() => isOptBtnClicked = !isOptBtnClicked)"><img src="../css/images/option menu.svg" /></button>
+            <button class="options-button" @onclick="toggleOptionsMenu"><img src="../css/images/option menu.svg" /></button>
 
         </div>
 
@@ -286,76 +286,85 @@
             }
         }
 
+        if (subCatColor==null || subCatColor=="")
+        {
+            subCatColor = convertCatColors("#678EF4");
+        }
+        else
+        {
+            subCatColor = convertCatColors(subCatColor);
+        }
+
     }
 
-    public string convertCatColors(string catColor)
+    public string convertCatColors(string? catColor)
     {
         string convertedColor = "";
         string outlineColor = "";
         switch (catColor)
         {
             case "#F4B367": //mustard
-                convertedColor = "rgba(244, 179, 103, 0.13)";
+                convertedColor = "#f4b36721";
                 outlineColor = "rgba(244, 179, 103, 1)";
                 Console.WriteLine("cat color is mustard");
                 break;
             case "#AEA2F9": //purple
-                convertedColor = "rgba(174, 162, 249, 0.13)";
+                convertedColor = "#aea2f921";
                 outlineColor = "rgba(174, 162, 249, 1)";
                 Console.WriteLine("cat color is dark purple");
                 break;
             case "#F467AB": //dark pink
-                convertedColor = "rgba(244, 103, 171, 0.13)";
+                convertedColor = "#f467ab21";
                 outlineColor = "rgba(244, 103, 171, 1)";
                 Console.WriteLine("cat color is dark pink");
                 break;
             case "#F47867": //salmon pink
-                convertedColor = "rgba(244, 120, 103, 0.13)";
+                convertedColor = "#f4786721";
                 outlineColor = "rgba(244, 120, 103, 1)";
                 Console.WriteLine("cat color is salmon pink");
                 break;
             case "#678EF4": //defualt
-                convertedColor = "rgba(103, 142, 244, 0.13)";
+                convertedColor = "#678ef421";
                 outlineColor = "rgba(103, 142, 244, 1)";
                 Console.WriteLine("cat color is default");
                 break;
             case "#8DE4BF": //light green
-                convertedColor = "rgba(141, 228, 191, 0.13)";
+                convertedColor = "#8de4bf21";
                 outlineColor = "rgba(141, 228, 191, 1)";
                 Console.WriteLine("cat color is light green");
                 break;
             case "#67CAF4": //light blue
-                convertedColor = "rgba(103, 202, 244, 0.13)";
+                convertedColor = "#67caf421";
                 outlineColor = "rgba(103, 202, 244, 1)";
                 Console.WriteLine("cat color is light blue");
                 break;
             case "#FCE884": //banana
-                convertedColor = "rgba(255, 239, 157, 0.13)";
+                convertedColor = "#ffef9d21";
                 outlineColor = "rgba(255, 239, 157, 1)";
                 Console.WriteLine("cat color is banana");
                 break;
             case "#F9D3C2": //cream
-                convertedColor = "rgba(249, 211, 194, 0.13)";
+                convertedColor = "#f9d3c221";
                 outlineColor = "rgba(249, 211, 194, 1)";
                 Console.WriteLine("cat color is cream");
                 break;
             case "#09AE73": //dark green
-                convertedColor = "rgba(9, 174, 115, 0.13)";
+                convertedColor = "#09ae7321";
                 outlineColor = "rgba(9, 174, 115, 1)";
                 Console.WriteLine("cat color is dark green");
                 break;
             case "#8C8B8B": //dark gray
-                convertedColor = "rgba(140, 139, 139, 0.25)";
+                convertedColor = "#8c8b8b40";
                 outlineColor = "rgba(140, 139, 139, 1)";
                 Console.WriteLine("cat color is dark gray");
                 break;
             case "#DADADA": //gray
-                convertedColor = "rgba(218, 218, 218, 0.13)";
+                convertedColor = "#dadada21";
                 outlineColor = "rgba(218, 218, 218, 1)";
                 Console.WriteLine("cat color is light gray");
                 break;
             case null: //defualt
-                convertedColor = "rgba(103, 142, 244, 0.13)";
+                convertedColor = "#678ef421";
                 outlineColor = "rgba(103, 142, 244, 1)";
                 Console.WriteLine("cat color is default");
                 break;
@@ -442,6 +451,7 @@
             }
         }
         editSubCatBtnClicked = !editSubCatBtnClicked;
+        toggleOptionsMenu();
     }
 
     public async Task saveUpdatedSubCat()
@@ -470,6 +480,7 @@
             updateEditedSubCat.InvokeAsync(subCatToEdit);
 
             editSubCatBtnClicked = false; //closeing the edit overlay
+           
 
             Console.WriteLine("sub category updated");
 
@@ -485,6 +496,7 @@
     {
         deleteBtnClicked = !deleteBtnClicked;
         popupBodyText = "תת הקטגוריה '" + subCategoryTitle + "' עומדת להמחק";
+        toggleOptionsMenu();
     }
     public async Task deleteSubCat()
     {
@@ -553,5 +565,10 @@
             }
             Console.WriteLine("ogBudget- " + ogBudget + ", budget- " + budget);
         }
+    }
+
+   void toggleOptionsMenu()
+    {
+        isOptBtnClicked = !isOptBtnClicked;
     }
 }
