--- a/Client/Components/SubCategoryComponent.razor.css
+++ b/Client/Components/SubCategoryComponent.razor.css
@@ -1,6 +1,6 @@
 ﻿.budget-card {
     /* width: 300px; */
-    background-color: #EDEFF7;
+/*    background-color: #EDEFF7;*/
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     /* padding: 20px; */
     padding: 1vh 1.3vh;
@@ -20,7 +20,7 @@
 
 {
     /* width: 300px; */
-    background-color: #EDEFF7;
+    /*background-color: #EDEFF7;*/
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     /* padding: 20px; */
     padding: 1vh 1.3vh;
