--- a/Client/Pages/ProfilePage.razor.css
+++ b/Client/Pages/ProfilePage.razor.css
@@ -368,7 +368,7 @@
     border: none;
     padding: 1vh 1vh;
     font-size: 1.1rem;
-    width: 93%;
+    width: 97%;
 }
 
 .outerOnbaordings {
@@ -378,7 +378,7 @@
     border: none;
     padding: 1vh 1vh;
     font-size: 1.1rem;
-    width: 60%;
+    width: 76%;
 }
 
 .outerDropAndPoly {
@@ -389,30 +389,29 @@
 }
 
 .onBoardings {
-
     display: flex;
     flex-direction: column;
-    border-radius: 0.1875rem;
-    border: 0.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 0.25rem;
     background: #FFF;
     justify-content: center;
-    width: 36.5%;
+    width: 76%;
     padding: 0.8vh 1vw;
     z-index: 2;
     position: absolute;
-    margin-top: 3.8vh;
+    margin-top: 33%;
     box-shadow: 0px 31px 9px 0px rgba(0, 0, 0, 0.00), 0px 20px 8px 0px rgba(0, 0, 0, 0.02), 0px 11px 7px 0px rgba(0, 0, 0, 0.06), 0px 5px 5px 0px rgba(0, 0, 0, 0.10), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 .divider {
     background-color: #D6D9F1;
     height: 0.2vh;
+    margin: 0.4vh 0;
 }
 
 .outerOn {
     display: flex;
     width: 94%;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
     position: relative;
     flex-direction: column;
@@ -422,4 +421,291 @@
     display: flex;
     width: 100%;
     justify-content: flex-end;
+    margin-top: 1.4vh;
+}
+
+.dropDownOptionBtn {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    width: 100%;
+    height: 50%;
+    padding: 0.5vh 0;
+}
+
+.secondery-button {
+    border: 1px solid #6775F4;
+    width: 15.375rem;
+    height: 2.3rem;
+    flex-shrink: 0;
+    border-radius: 0.375rem;
+    text-align: center;
+    font-family: Heebo;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.outerBtn {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin: 4vh 0 2vh;
+}
+
+.outerOptions {
+    position: absolute;
+    margin: 0;
+    top: 3.3vh;
+    left: 8vw;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 29%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.4vh;
+    border-radius: 0.1875rem;
+    border: 0.2px solid rgba(0, 0, 0, 0.15);
+    background: #FFF;
+    box-shadow: 0px 47px 13px 0px rgba(40, 45, 93, 0.00), 0px 30px 12px 0px rgba(40, 45, 93, 0.01), 0px 17px 10px 0px rgba(40, 45, 93, 0.05), 0px 8px 8px 0px rgba(40, 45, 93, 0.09), 0px 2px 4px 0px rgba(40, 45, 93, 0.10);
+}
+
+.optionButton {
+    width: 100%;
+    padding: 12px 20px;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    color: #333;
+    transition: background-color 0.3s;
+}
+
+    .optionButton .icon {
+        margin-left: 10px; /* Space between text and icon */
+        width: 24px; /* Icon size */
+        height: auto;
+    }
+
+
+.outerDotsAndOptions {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.outerTitleAndCounter {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.input-container {
+    position: relative;
+    width: 100%; /* Ensure full width */
+}
+
+.titleBox {
+    width: 100%;
+    padding: 5px 6px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.counter {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: #666;
+    font-size: 12px;
+    padding: 2px 6px;
+}
+
+    .counter span {
+        color: inherit; /* Inherit color from parent */
+        color: #636363
+    }
+
+#emoji-trigger {
+    background: none; /* Removes default background */
+    color: inherit; /* Inherits text color from parent */
+    border: none; /* Removes default border */
+    padding: 0; /* Removes default padding */
+    margin: 0; /* Removes default margin */
+    font: inherit; /* Inherits font from parent */
+    cursor: pointer; /* Ensures the cursor appears clickable */
+    outline: inherit;
+}
+
+
+.emoji-keyboard {
+    border: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: absolute;
+    top: 102%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s, visibility 0.3s;
+    visibility: hidden;
+    /* width: 943%; */
+    z-index: 1;
+}
+
+    .emoji-keyboard.visible {
+        opacity: 1;
+        visibility: visible;
+        padding: 3vh 5vw;
+    }
+
+.hideDefaultEmojiBtn {
+    display: none;
+}
+
+.emoji-categories {
+    display: flex;
+    justify-content: center;
+    gap: 14vw;
+    margin-bottom: 1.5vh;
+    margin-top: 0.5vh;
+}
+
+.outerEmojiBtnAndKeyboard {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1vh;
+    position: relative;
+    width: 100%;
+}
+
+.outerEmojiKeyboard {
+    position: absolute;
+    top: -2vh;
+    width: 100%;
+}
+
+.category-button {
+    /* padding: 8px 16px; */
+    font-size: 14px;
+    background-color: #e0e0e0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+    transition: background-color 0.2s, padding 0.2s;
+    font-weight: 600;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    font-weight: 500;
+}
+
+    .category-button.active {
+        text-decoration: underline;
+        text-decoration-color: #6775F4;
+        text-decoration-thickness: 0.4vh;
+        text-underline-offset: 1vh;
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        margin: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+        font-weight: 600;
+    }
+
+.removeKeybord {
+    display: none;
+}
+
+.cancleEmoji {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-decoration: underline;
+    text-decoration-color: #030942;
+    text-decoration-thickness: 0.1vh;
+    text-underline-offset: 0.7vh;
+}
+
+
+.selectedEmoji {
+    background: none; /* Removes default background */
+    color: inherit; /* Inherits text color from parent */
+    border: none; /* Removes default border */
+    padding: 0; /* Removes default padding */
+    margin: 0; /* Removes default margin */
+    font: inherit; /* Inherits font from parent */
+    cursor: pointer; /* Ensures the cursor appears clickable */
+    outline: inherit;
+}
+
+.outerCancleAndEmoji {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+
+.selectedEmoji {
+    position: relative;
+    border: none; /* Adjust as needed */
+    background: none; /* Adjust as needed */
+    padding: 5px; /* Adjust padding as needed */
+    display: flex;
+    align-items: center;
+}
+
+.emoji {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.keyBoardAndBtn {
+    display: flex;
+    position: relative;
+    bottom: 4vh;
+    right: 2vh;
+}
+
+.outerEmojiAndBtn {
+    display: flex;
+    flex-direction: column;
 }
